# Copyright 2009-2010 Stephen Glass.
# 
# This file is part of OP25
# 
# Banjax is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
# 
# Banjax is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	lib \
	src
